--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,10 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
+
+
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -46,3 +49,27 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+
+/* Extra CSS to make borders around my div tags and such */
+
+body{
+	background-color: LightGray;
+}
+
+div {
+	border: 1px solid Chocolate;
+}
+
+.top-navigation {
+	background-color:#fff;
+
+}
+
+.top-navigation > .content {
+	width: 970rem;
+	height:70rem;
+	margin: 0 auto;
+}
+
